sass training step 1 finished

--- a/SCSS/main.scss
+++ b/SCSS/main.scss
@@ -5,21 +5,46 @@
     @return map-get($font-weights, $weight-name );
 }
 
+@mixin flexCenter($direction) {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: $direction;
+}
+@mixin theme($light-theme: true) {
+    @if $light-theme {
+        background: lighten($primary-color, 100%);
+        color: darken($text-color, 100%);
+    }
+}
+@mixin mobile {
+    @media (max-width: $mobile) {
+        @content;
+    }
+}
 body {
     background: $primary-color;
-    color: $test-color;
+    color: $text-color;
 }
 
 .main {
+    @include flexCenter(row);
     width: 80%;
     margin: 0 auto;
 
     #{&}__p {
     font-weight: weight(bold);
+    margin: 0.125rem;
 
-    &:hover {
-        color: teal;
+        &:hover {
+            color: teal;
+        }
     }
+    @include mobile {
+        flex-direction: column;
+    }
+}
 
-    }
+.light {
+    @include theme($light-theme: true);
 }
