--- a/SCSS/_variables.scss
+++ b/SCSS/_variables.scss
@@ -1,6 +1,8 @@
 $primary-color: darkgray;
 $accent-color: red;
-$test-color: white;
+$text-color: white;
 $font-weights: ("regular": 400,
     "medium": 500,
     "bold": 700);
+
+$mobile: 50rem;
