--- a/SCSS/main.scss
+++ b/SCSS/main.scss
@@ -32,7 +32,7 @@ body {
     width: 80%;
     margin: 0 auto;
 
-    #{&}__p {
+    #{&}__p1 {
     font-weight: weight(bold);
     margin: 0.125rem;
 
@@ -40,11 +40,14 @@ body {
             color: teal;
         }
     }
+    #{&}__p2 {
+        @extend .main__p1;
+    }
     @include mobile {
         flex-direction: column;
     }
 }
 
 .light {
-    @include theme($light-theme: true);
+    @include theme($light-theme: false);
 }
