finished intro training

--- a/SCSS/_variables.scss
+++ b/SCSS/_variables.scss
@@ -1,6 +1,6 @@
-$primary-color: darkgray;
-$accent-color: red;
-$text-color: white;
+$primary-color: rgb(232, 232, 232);
+$accent-color: rgb(189, 136, 44);
+$text-color: rgb(58, 57, 57);
 $font-weights: ("regular": 400,
     "medium": 500,
     "bold": 700);
