--- a/Portfolio/scss/_home.scss
+++ b/Portfolio/scss/_home.scss
@@ -10,13 +10,15 @@
         rgba($primary-color, 0.9), 
         rgba($primary-color, 0.3)
     ),
-    url('../img/1.jpg') center top;
+    url('../img/6.jpg') center top;
     background-size: cover;
-
+    &__text {
+        margin-top: -5.5rem;
+    }
     &__name {
         font-size: 5rem;
         padding-bottom: 1rem;
-        margin-top: 1rem;
+        margin-bottom: 1rem;
         border-bottom: 2px solid set-text-color($primary-color);
 
         &--last {
