--- a/Portfolio/scss/_home.scss
+++ b/Portfolio/scss/_home.scss
@@ -15,15 +15,32 @@
     &__text {
         margin-top: -5.5rem;
     }
+    &__line {
+        border-bottom: 2px solid set-text-color($primary-color);
+        margin: -1rem auto 1rem auto;
+        width: 25%;
+    }
     &__name {
         font-size: 5rem;
         padding-bottom: 1rem;
         margin-bottom: 1rem;
-        border-bottom: 2px solid set-text-color($primary-color);
 
         &--last {
             color: $secondary-color;
             font-weight: 700;
         }
+    }
+}
+
+$breakpoint-tablet: 768px;
+
+@media (min-width: $breakpoint-tablet) {
+    .home {
+        background: linear-gradient(to right,
+            rgba($primary-color, .7),
+            rgba($primary-color, .1)),
+            url('../img/6.jpg') center bottom;
+        background-size: 100% 150%;
+        background-repeat: no-repeat;
     }
 }
